# iowarp-core

./: .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-dist.yml  build-no-tests.yml  test-install.yml  test-package.yml
context-assimilation-engine/core/src/: core_client.cc
context-assimilation-engine/core/src/factory/: assimilator_factory.cc  hdf5_file_assimilator.cc
context-assimilation-engine/core/util/: wrp_cae_omni.cc
context-assimilation-engine/test/unit/: CMakeLists.txt
context-assimilation-engine/test/unit/binary_assim/: test_binary_assim.cc
context-assimilation-engine/test/unit/range_test/: test_range_assim.cc
context-exploration-engine/hdf-compass/data/hdf5/: complex.h5
context-exploration-engine/hdf-compass/data/parquet/: sample_float16.parquet
context-runtime/: CMakeLists.txt
context-runtime/test/unit/distributed/: docker-compose.yml
context-transfer-engine/: CMakeLists.txt
context-transfer-engine/core/src/: core_runtime.cc
context-transport-primitives/: CMakeLists.txt
docker/wrp_cte_bench/: Dockerfile  docker-compose.yml
